# targetintel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements-lock.txt
.claude/: settings.json
notebooks/: 01_target_prioritization_mvp.py
scripts/: 01_target_prioritization_mvp.py  04_score_targets.py  08_run_benchmark.py  09_build_benchmark_universe.py  11_run_sensitivity_analysis.py  12_generate_sensitivity_figure.py  export_depmap_release_snapshot.py
src/: io_relevance.py  opentargets.py  scoring.py
targetintel/: benchmark.py  cli.py  confidence.py  evidence_auditor.py  feature_table.py  html_reports.py  hypothesis_cards.py  intent_ranking.py  modality.py  opentargets.py  pipeline.py  role_classifier.py  scoring.py  sensitivity.py  sensitivity_visualization.py  target_universe.py
tests/: test_benchmark_snapshot.py  test_dependency_integration.py  test_dependency_integration_isolation.py  test_dependency_lock.py  test_depmap_benchmark.py  test_depmap_benchmark_isolation.py  test_depmap_contracts.py  test_depmap_ingestion.py  test_depmap_ingestion_isolation.py  test_depmap_report_contract.py  test_depmap_report_rendering.py  test_depmap_report_snapshot.py  test_evidence_extractor.py  test_evidence_integration.py  test_evidence_intrinsic_validation.py  test_evidence_models.py  test_evidence_promotion.py  test_evidence_reporting.py  test_evidence_retriever.py  test_evidence_semantic_validation.py  test_evidence_store.py  test_grounded_extraction.py  test_grounded_prompt.py  test_grounded_schema.py  (+27 more)
(+142 files in other folders)
