[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "targetintel-io"
version = "0.1.3"
description = "Explainable therapeutic-intent-aware target triage for anti-PD-1-resistant melanoma"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Rafael Soler Ortuño" },
]

dependencies = [
    "duckdb>=1.1,<2.0",
    "matplotlib>=3.8,<4.0",
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "PyYAML>=6.0,<7.0",
    "requests>=2.31,<3.0",
    "scikit-learn>=1.4,<2.0",
]


[project.scripts]
targetintel = "targetintel.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
]

lock = [
    "pip-tools>=7,<8",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["targetintel*"]
